...
    <string name="stream_compose_channel_list_you">Вы</string>
    <string name="stream_compose_confirm">Подтвердить</string>
    <string name="stream_compose_copy_message">Копировать сообщение</string>
    <string name="stream_compose_delete_message">Удалить сообщение</string>
    <string name="stream_compose_delete_message_text">Удалить это сообщение?</string>
    <string name="stream_compose_delete_message_title">Удалить сообщение</string>
    <string name="stream_compose_disconnected">Нет соединения</string>
    <string name="stream_compose_dismiss">Закрыть</string>
    <string name="stream_compose_edit_answer">Изменить комментарий</string>
    <string name="stream_compose_edit_message">Изменить сообщение</string>
    <string name="stream_compose_emoji_picker_title">Выбор эмодзи</string>
    <string name="stream_compose_file_preview">Файл</string>
    <string name="stream_compose_flag_message">Пожаловаться на сообщение</string>
...
    <string name="stream_compose_user_status_last_seen">Последний раз в сети %1$s</string>
    <string name="stream_compose_user_status_last_seen_just_now">Только что в сети</string>
    <string name="stream_compose_user_status_online">В сети</string>
    <string name="stream_compose_video_preview">Видео</string>
    <string name="stream_compose_waiting_for_network">Ожидание сети</string>
    <string name="stream_ui_attachment_picker_error_unresolvable_attachments">Некоторые файлы не удалось загрузить, они пропущены.</string>
    <string name="stream_ui_back_button">Назад</string>
    <string name="stream_ui_channel_attachments_files_empty_text">Отправьте файл, и он появится здесь</string>
    <string name="stream_ui_channel_attachments_files_empty_title">Нет файлов</string>
    <string name="stream_ui_channel_attachments_files_load_error">Не удалось загрузить файлы.</string>
    <string name="stream_ui_channel_attachments_files_title">Файлы</string>
    <string name="stream_ui_channel_attachments_media_empty_text">Отправьте фото или видео, и они появятся здесь</string>
    <string name="stream_ui_channel_attachments_media_empty_title">Нет фото и видео</string>
...
